runit (1.0.2-1) unstable; urgency=low

  * new upstream release.
  * debian/implicit: update to revision 1.8.
  * debian/control: Build-Depends: dietlibc-dev (>> 0.25-0) (fixes
    build/testing failure on arm).

 -- Gerrit Pape <pape@smarden.org>  Sun, 28 Mar 2004 18:46:32 +0000

runit (1.0.1-1) unstable; urgency=low

  * new upstream release.
   * chpst -e dir doesn't barf on subdirectories of dir (closes: #234172).
  * debian/runsvdir-start.8: new; thx Bastian Kleineidam (closes: #234114).
  * debian/rules: run make check; no longer provide /usr/sbin/setuidgid;
    install runsvdir-start man page; create .diet/gcc on i386 to suppress
    gcc warnings in build logs; minor.

 -- Gerrit Pape <pape@smarden.org>  Mon,  8 Mar 2004 15:49:54 +0000

runit (1.0.0-1) unstable; urgency=low

  * upstream stable release.
  * debian/implicit: update to revision 1.5.

 -- Gerrit Pape <pape@smarden.org>  Tue, 10 Feb 2004 13:20:21 +0000

runit (0.13.1-1) unstable; urgency=low

  * new upstream version: fixes svlogd to print new-line character on end
    of line properly (closes: #228446).

 -- Gerrit Pape <pape@smarden.org>  Mon, 19 Jan 2004 13:37:13 +0000

runit (0.13.0-1) unstable; urgency=low

  * new upstream version: svlogd.8 documents -tt option (closes: #213011);
    fixes typos in runsv.8 (closes: #223076).
  * debian/control: Build-Depends: dietlibc, now also on s390.
  * debian/rules: use dietlibc on s390.

 -- Gerrit Pape <pape@smarden.org>  Mon, 12 Jan 2004 16:07:06 +0100

runit (0.12.1-2) unstable; urgency=low

  * debian/control: no longer Build-Depends: debhelper; Standards-Version:
    3.6.1.0.
  * debian/rules: stop using debhelper, use implicit rules; install runit,
    runit-init mode 0755 (closes: #224800).
  * debian/implicit: new; implicit Makefile rules.
  * debian/README.Debian: rename to debian/runit.README.Debian.
  * debian/runit.dirs, debian/runit.links: remove; obsolete.
  * debian/runit.conffiles, debian/runit.docs: new.